# services/core/sensor/app/sensor_api.py
@@ -3,7 +3,7 @@ import requests
 
 ### Data Access Endpoints
 
-def add_sensor(userid, devicetoken):
+def add_sensor(userid, deviceid):
     sensor = {
         "name" : request.json["name"]
     }
@@ -13,10 +13,10 @@ def add_sensor(userid, devicetoken):
         "operation":"add",
         "sensor":created_sensor["name"]+":"+created_sensor["_id"]
     }
-    requests.patch("http://device-service:5400/v1/users/{0}/devices/{1}".format(userid, devicetoken), json=json)
+    requests.patch("http://device-service:5400/v1/users/{0}/devices/{1}".format(userid, deviceid), json=json)
     return make_response(sensor_response.content, sensor_response.status_code)
 
-def delete_sensor(userid, devicetoken, sensorid):
+def delete_sensor(userid, deviceid, sensorid):
     sensor_response = requests.get("http://sensor-access:5600/v1/sensors/{}".format(sensorid))
     sensor = sensor_response.json()
     json = {
@@ -24,17 +24,17 @@ def delete_sensor(userid, devicetoken, sensorid):
         "sensor":sensor["name"]+":"+sensor["_id"]
     }
     sensor_response = requests.delete("http://sensor-access:5600/v1/sensors/{}".format(sensorid))
-    requests.patch("http://device-service:5400/v1/users/{0}/devices/{1}".format(userid, devicetoken), json=json)
+    requests.patch("http://device-service:5400/v1/users/{0}/devices/{1}".format(userid, deviceid), json=json)
     return make_response(sensor_response.content, sensor_response.status_code)
 
-def get_sensor(userid, devicetoken, sensorid):
+def get_sensor(userid, deviceid, sensorid):
     sensor_response = requests.get("http://sensor-access:5600/v1/sensors/{}".format(sensorid))
     return make_response(sensor_response.content, sensor_response.status_code)
 
-def patch_sensor(userid, devicetoken, sensorid):
+def patch_sensor(userid, deviceid, sensorid):
     sensor_response = requests.patch("http://sensor-access:5600/v1/sensors/{}".format(sensorid), json=request.json)
     return make_response(sensor_response.content, sensor_response.status_code)
 
-def device_patch_sensor(devicetoken, sensorid):
+def device_patch_sensor(deviceid, sensorid):
     sensor_response = requests.patch("http://sensor-access:5600/v1/sensors/{}".format(sensorid), json=request.json)
     return make_response(sensor_response.content, sensor_response.status_code)
